--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   height: 600px;
   background-color: black;
   color: #00FF00;
-  border: 4px solid #00FF00;
+  /* border: 4px solid #00FF00; */ /* ← Removed */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
